--- a/dz js glightbox & masonry/style.css
+++ b/dz js glightbox & masonry/style.css
@@ -1,60 +1,47 @@
 body {
-  background: #f4f4f4;
-  margin: 0;
-  font-family: "Arial", sans-serif;
-}
-
-.header {
-  padding: 30px 0;
-  text-align: center;
+  background: #222;
 }
 
 .gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   width: 90%;
-  max-width: 1200px;
   margin: 0 auto;
 }
 
-/* Masonry items */
-
-.grid {
-  display: block;
-}
-
-.grid-sizer,
-.grid-item {
-  width: 32%;
-}
-
-.grid-item {
-  margin-bottom: 15px;
-  border-radius: 12px;
+.gallery a {
+  height: 200px;
+  width: 300px;
+  margin: 20px;
+  border-radius: 5px;
   overflow: hidden;
-  cursor: pointer;
+  box-shadow: 0 3px 5px #000;
 }
 
-.grid-item img {
+.gallery a img {
+  height: 100%;
   width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 12px;
-  transition: 0.3s;
-}
-
-.grid-item:hover img {
-  transform: scale(1.05);
-}
-
-/* Tall and wide items */
-
-.tall img {
-  height: 400px;
   object-fit: cover;
+
+  &:hover {
+    transform: scale(1.3);
+  }
 }
 
-.wide img {
-  height: 250px;
-  object-fit: cover;
+h1 {
+  font-size: 40px;
+  text-align: center;
+  color: white;
+  margin-top: 10px;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.centerDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Mobile */
